--- a/admin.html
+++ b/admin.html
@@ -72,6 +72,10 @@
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"></path></svg>
                     <span class="sidebar-label">Withdrawals</span>
                 </a>
+                <a href="/admin_fix_capabilities.html" 
+                   class="btn btn-primary">
+                    🔧 Fix All Capabilities
+                </a>
             </nav>
         </aside>
 
@@ -111,12 +115,12 @@
                         <div class="bg-white p-6 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-800 mb-4">Largest Winning Trades</h3>
                             <ul id="biggest-wins-list" class="space-y-3">
-                                </ul>
+                            </ul>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-800 mb-4">Users with High Win Rates (>=10 Trades)</h3>
                             <ul id="high-win-rate-list" class="space-y-3">
-                                </ul>
+                            </ul>
                         </div>
                     </div>
 
@@ -124,12 +128,12 @@
                         <div class="bg-white p-6 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-800 mb-4">Top Traders by Volume</h3>
                             <ul id="top-traders-list" class="space-y-3">
-                                </ul>
+                            </ul>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-800 mb-4">Top Winners by P&L</h3>
                             <ul id="top-winners-list" class="space-y-3">
-                                </ul>
+                            </ul>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow">
                             <h3 class="text-lg font-semibold text-gray-800 mb-4">Top 5 Countries by Users</h3>
@@ -168,7 +172,7 @@
                             <input type="text" id="search-name" placeholder="Search by Name..." class="w-full px-3 py-2 border border-gray-300 rounded-md">
                             <select id="filter-country" class="w-full px-3 py-2 border border-gray-300 rounded-md">
                                 <option value="">All Countries</option>
-                                </select>
+                            </select>
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
                             <div>
@@ -245,6 +249,7 @@
                                     <tr>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">User Email</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Amount</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Payout Method</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Status</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Requested At</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
@@ -259,7 +264,6 @@
                 <div id="withdrawal-management" class="section hidden">
                     <h2 class="text-3xl font-bold mb-6">💳 Withdrawal Requests</h2>
 
-                    <!-- Filters -->
                     <div class="bg-gray-800 rounded-lg p-6 mb-6">
                         <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
                             <div>
@@ -291,7 +295,6 @@
                         </div>
                     </div>
 
-                    <!-- Stats Summary -->
                     <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-6">
                         <div class="bg-yellow-600 rounded-lg p-6">
                             <h3 class="text-sm font-medium text-yellow-100 mb-2">⏳ Pending</h3>
@@ -311,10 +314,8 @@
                         </div>
                     </div>
 
-                    <!-- Withdrawal List -->
                     <div id="withdrawalList" class="space-y-4">
-                        <!-- Withdrawals will be loaded here -->
-                    </div>
+                        </div>
                 </div>
             </main>
         </div>
@@ -602,6 +603,7 @@
                 <tr class="hover:bg-gray-50">
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">${escapeHTML(req.email)}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">$${parseFloat(req.amount).toFixed(2)}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${escapeHTML(req.payout_display)}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm"><span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full ${statusClass}">${escapeHTML(req.status)}</span></td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${new Date(req.requested_at).toLocaleString()}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium space-x-2">${actionButtons}</td>
@@ -625,7 +627,7 @@
                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">${escapeHTML(user.email)}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">${escapeHTML(user.first_name || '')} ${escapeHTML(user.last_name || '')}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${escapeHTML(user.country || 'N/A')}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${escapeHTML(user.role)}</td>
+                    <td class="px-6 py-4 whitespace-nowJrap text-sm text-gray-500">${escapeHTML(user.role)}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${escapeHTML(user.provider)}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${new Date(user.created_at).toLocaleDateString()}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${statusBadge}</td>
@@ -928,8 +930,8 @@
             const buildTradesTable = (tradeData) => {
                 if (tradeData.length === 0) return `<div class="h-full flex items-center justify-center text-gray-500">No trade history.</div>`;
                 const rows = tradeData.map(d => {
-                     const statusClass = d.status === 'WIN' ? 'bg-green-100 text-green-800' : d.status === 'LOSE' ? 'bg-red-100 text-red-800' : 'bg-gray-100 text-gray-800';
-                     return `
+                    const statusClass = d.status === 'WIN' ? 'bg-green-100 text-green-800' : d.status === 'LOSE' ? 'bg-red-100 text-red-800' : 'bg-gray-100 text-gray-800';
+                    return `
                         <tr class="hover:bg-gray-50">
                             <td data-label="Date" class="p-3">${new Date(d.created_at).toLocaleString()}</td>
                             <td data-label="Pair" class="p-3 font-medium">${d.pair} (${d.direction})</td>
